--- a/CV/index.html
+++ b/CV/index.html
@@ -1,36 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <meta name="Curriculum Votae" content="Alejandro Diez, Java, Python, C">
+    <meta name="keywords" content="desarrollador web, Python, Java, C, JavaScript, programación, desarrollo de software, ingeniero de computación">
+    <meta name="Description" content="Desarrollador de aplicaciones web y moviles con 0 años de experiencia en la creacion de aplicaciones web. Experto en Python, JavaScript y Java.">
+    <meta name="Author" content="Alejandro Diez">
     <title>Alejandro Diez</title>
 </head>
 <body>
     <header>
         <h1>Alejandro Diez</h1>
-        <h2>Curriculum Vitae</h2>
-        <table border="1">
-            <img src="" alt="Foto propia">
-        </table>
+        <img src="https://placehold.co/300x300" alt="Foto propia">
     </header>
     <nav>
         <ul>
+            <li><a href="#resumen">Resumen</a></li>
+            <li><a href="#experiencia">Experiencia</a></li>
             <li><a href="#educacion">Educación</a></li>
-            <li><a href="#tecnologia">Tenologías</a></li>
+            <li><a href="#habilidades">Tenologías</a></li>
+            <li><a href="#proyectos">Proyectos</a></li>
+            <li><a href="#mapa">Mapa</a></li>
+            <li><a href="#contactame">Contactame</a></li>
         </ul>
     </nav>
     <main>
-        <section id="educacion">
-        <h3>Educación: </h3>
-        <p>Unidad Educativa Olimpia</p>
+        <section id="resumen">
+            <h2>Resumen:</h2>
         </section>
-        <section id="tecnologia">
-            <h3>Tecnologías: </h3>
-           <img src="https://www.python.org/static/img/python-logo.png" alt="Python">
-                <img src="https://static.vecteezy.com/system/resources/previews/022/100/945/original/java-logo-transparent-free-png.png" alt="Java" width="200" height="150">
+        <section id="experiencia">
+            <h2>Experiencias:</h2>
+            <table border="1">
+                <caption>Empresas donde no trabaje</caption>
+                <thead>
+                    <tr>
+                        <th>Empresa</th>
+                        <th>Puesto</th>
+                        <th>Años de experiencia</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <td>Google</td>
+                    <td>Programador Senior</td>
+                    <td>0</td>
+                </tbody>
+            </table>
+        </section>
+        <section id="educacion">
+            <h2>Educación: </h2>
+            <p>Unidad Educativa Olimpia</p>
+        </section>
+        <section id="habilidades">
+            <h2>Habilidades: </h2>
+                <img src="https://www.python.org/static/img/python-logo.png" alt="Python">
+                <img src="https://static.vecteezy.com/system/resources/previews/022/100/945/original/java-logo-transparent-free-png.png" alt="Java" width="150" height="150">
                 <img src="https://th.bing.com/th/id/R.87fec03e00082f4d453e8a394f9a239d?rik=LSeXDhvj2MVDtA&pid=ImgRaw&r=0" alt="C" width="200" height="100">
         </section>
+        <section id="proyectos">
+            <h2>Proyectos:</h2>
+            <video width="640" height="360" controls>
+                <source src="./Video.mp4" type="video/mp4">
+            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/aVkRHSROklI" title="Musica perrona" allowfullscreen></iframe>
+        </section>
+
+
+        <section id="mapa">
+            <h2>Mapa</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31896.1542201309!2d-79.9637504!3d-2.1463039999999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sec!4v1728502174640!5m2!1ses-419!2sec" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+    
+        <section id="contactame">
+            <h2>Contactame</h2>
+            <form action="">
+                <form>
+                    <label for="nombre">Nombre Completo:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+                    <label for="email">Correo Electrónico:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="experiencia">Experiencia Laboral:</label>
+                    <textarea id="experiencia" name="experiencia" rows="5"
+                    required></textarea>
+                    <label for="educacion">Educación:</label>
+                    <textarea id="educacion" name="educacion" rows="5"
+                    required></textarea>
+                    <label>Habilidades Técnicas:</label><br>
+                    <input type="checkbox" name="habilidades" value="HTML"> HTML
+                    <input type="checkbox" name="habilidades" value="CSS"> CSS
+                    <input type="checkbox" name="habilidades" value="JavaScript">
+            </form>
+        </section>        
     </main>
+
+    <footer>
+        <p> Alejandro Diez - 2024</p>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/AlejandroDiez">LinkedIn</a></li>
+            <li><a href="https://github.com/AlexDiez10">Github</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
