--- a/CV/index.html
+++ b/CV/index.html
@@ -36,6 +36,7 @@
             <div class="social-icon">
                 <a href="#linkedin"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#github"><i class="fa-brands fa-github"></i></a>
+                <a href="#twitter"><i class="fa-brands fa-x-twitter"></i></a>
             </div>
 
             <a href="#" class="btn">Contratame</a>
@@ -227,9 +228,9 @@
 
     <footer class="footer">
         <div class="social">
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            <a href=""><i class="fa-brands fa-github"></i></a>
-            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/alejandro-diez-gutierrez-b6bb65294/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/AlexDiez10"><i class="fa-brands fa-github"></i></a>
+            <a href="https://x.com/Alejand09539987"><i class="fa-brands fa-x-twitter"></i></a>
         </div>
         <ul>
             <li><a href="#">FAQ</a></li>
