--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="desarrollador web, Python, Java, C, JavaScript, programación, desarrollo de software, ingeniero de computación">
+    <meta name="Description" content="Desarrollador de aplicaciones web y moviles con 0 años de experiencia en la creacion de aplicaciones web. Experto en Python, JavaScript y Java.">
+    <meta name="Author" content="Alejandro Diez">
     <title>Curriculum Vitae</title>
     <link rel="stylesheet" href="stylesheet/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
